Add few world methods (#879)